TreeMap->HashMap, boulder->bumling, don't output changelog to disk
- TreeMap didn't do what I hoped so changing the places back to HashMap
- updating the references of boulder to bumling as it isn't just
boulders
- all CFG type widgets can now be observes of CFGs
- CFGs may now have multiple observers
- simplifying the minimap icon checking
- adding data section to globals, and making it observable
- fixing autoclick checking
- adding data.json to contain any game data gathered
- new option General->Store game data which will gather data on
individual clients in addition to what was already gathered, this data
is used by some of the options menu widgets to give them more options

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,7 @@ dist.jar=${dist.dir}/hafen-client.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-io-2.4.jar=lib\\commons-io-2.4.jar
 file.reference.gluegen-rt.jar=lib\\gluegen-rt.jar
 file.reference.gson-2.3.1.jar=lib\\gson-2.3.1.jar
 file.reference.hafen-client-minion-src=src
@@ -49,7 +50,8 @@ javac.classpath=\
     ${file.reference.jnlp.jar}:\
     ${file.reference.jogg.jar}:\
     ${file.reference.jogl.jar}:\
-    ${file.reference.jorbis.jar}
+    ${file.reference.jorbis.jar}:\
+    ${file.reference.commons-io-2.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
