--- a/build.xml
+++ b/build.xml
@@ -2,7 +2,7 @@
 
 <project name="hafen" default="deftgt">
 	<import file="nbproject/build-impl.xml"/>
-	
+
 	<target name="build-env">
 		<mkdir dir="build" />
 		<mkdir dir="build/classes" />
@@ -10,7 +10,7 @@
 		<available property="has-buildinfo" file="build/classes/buildinfo" />
 		<available property="unpacked-lib" file="build/classes-lib" />
 	</target>
-  
+
 	<target name="buildinfo" depends="build-env">
 		<exec executable="git" outputproperty="gitrev" failifexecutionfails="false">
 			<arg line="rev-parse HEAD" />
@@ -34,6 +34,7 @@
 				<pathelement path="lib/jogg.jar" />
 				<pathelement path="lib/jglob.jar" />
 				<pathelement path="lib/gson-2.3.1.jar" />
+				<pathelement path="lib/commons-io-2.4.jar" />
 			</classpath>
 			<compilerarg value="-Xlint:unchecked" />
 			<compilerarg value="-Xlint:-options" />
@@ -49,7 +50,7 @@
 		<copy todir="build/classes/haven" file="etc/icon.png" />
 		<copy todir="build/classes/haven" file="etc/font.ttf" />
 	</target>
-  
+
 	<target name="appletview" depends="build-env">
 		<copy file="etc/applet.html" todir="build" />
 	</target>
@@ -66,6 +67,9 @@
 			<patternset excludes="META-INF/**" />
 		</unjar>
 		<unjar src="lib/gson-2.3.1.jar" dest="build/classes-lib">
+			<patternset excludes="META-INF/**" />
+		</unjar>
+		<unjar src="lib/commons-io-2.4.jar" dest="build/classes-lib">
 			<patternset excludes="META-INF/**" />
 		</unjar>
 	</target>
@@ -99,7 +103,7 @@
 		</jar>
 		<chmod file="dist/hafen.jar" perm="a+x" />
 	</target>
-  
+
 	<target name="res-jar" depends="build-env" unless="has-res-jar">
 		<get src="http://www.havenandhearth.com/java/hafen-res.jar" dest="lib/hafen-res.jar" usetimestamp="true" />
 		<get src="http://www.havenandhearth.com/java/builtin-res.jar" dest="lib/builtin-res.jar" usetimestamp="true" />
@@ -109,7 +113,7 @@
 		<available property="lib-builtin-jar" file="lib/builtin-res.jar" />
 		<fail unless="lib-builtin-jar" message="builtin-res.jar not available" />
 	</target>
-  
+
 	<target name="jars" depends="build-env, jar, res-jar">
 		<copy todir="build/lib">
 			<fileset dir="lib">
@@ -121,17 +125,17 @@
 			<fileset dir="lib/jogl-natives" includes="*.jar" />
 		</copy>
 	</target>
-  
+
 	<target name="deftgt" depends="jars, appletview" />
 
 	<target name="run" depends="jars">
 		<java jar="build/hafen.jar" fork="true" />
 	</target>
-  
+
 	<target name="clean">
 		<delete dir="build" />
 	</target>
-  
+
 	<target name="profile" depends="jars">
 		<nbprofiledirect>
 		</nbprofiledirect>
