--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,7 @@ dist.jar=${dist.dir}/hafen-client.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-collections4-4.0.jar=lib\\commons-collections4-4.0.jar
 file.reference.commons-io-2.4.jar=lib\\commons-io-2.4.jar
 file.reference.gluegen-rt.jar=lib\\gluegen-rt.jar
 file.reference.gson-2.3.1.jar=lib\\gson-2.3.1.jar
@@ -51,7 +52,8 @@ javac.classpath=\
     ${file.reference.jogg.jar}:\
     ${file.reference.jogl.jar}:\
     ${file.reference.jorbis.jar}:\
-    ${file.reference.commons-io-2.4.jar}
+    ${file.reference.commons-io-2.4.jar}:\
+    ${file.reference.commons-collections4-4.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
