--- a/build.xml
+++ b/build.xml
@@ -82,14 +82,14 @@
 			<fileset dir="resources/compiled" />
 			<file file="etc/map.html"/>
 			<file file="etc/data.json"/>
-			<file file="etc/gob_path.json"/>
+			<file file="etc/gob_path.xml"/>
 			<file file="etc/radar.xml"/>
 		</jar>
 		<jar destfile="dist/client-res.jar" update="true">
 			<fileset dir="resources/compiled" />
 			<file file="etc/map.html"/>
 			<file file="etc/data.json"/>
-			<file file="etc/gob_path.json"/>
+			<file file="etc/gob_path.xml"/>
 			<file file="etc/radar.xml"/>
 		</jar>
 	</target>
